deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weatherapp
  template:
    metadata:
      labels:
        app: weatherapp
    spec:
      containers:
        - name: weatherapp
          image: 395776234152.dkr.ecr.us-east-2.amazonaws.com/weatherapp:latest
          imagePullPolicy: Always
