ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-2:395776234152:certificate/21b02e30-298c-4846-94a8-155920eccbeb"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  rules:
    - host: myweatherdash.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weatherapp
                port:
                  number: 80
